package fix for vercel and title fix

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/nullstyle.css">
 
-    <title>React App</title>
+    <title>Med Booklet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
